# PyCrSDK

./: .gitignore  CMakeLists.txt  PyCrSDK.cpp  PyCrSDK.hpp  README.md  capture.py  connect_test.py  make.bat  pybind_module.cpp  record.py  test_capture.py  test_connect.py  test_exposure.py  test_shutter.py  test_transfer.py  test_zoom.py
TouchDesigner/: README.md  TdCrSDK.toe
include/: CameraDevice.cpp  CameraDevice.h  RemoteCli.cpp
installer/: MANIFEST.in  build.bat  setup.py
installer/PyCrSDK/: __init__.py
lib/opencv/Windows/x86_64/Debug/lib/: opencv_core480d.lib  opencv_highgui480d.lib  opencv_imgcodecs480d.lib  opencv_imgproc480d.lib
lib/opencv/Windows/x86_64/Release/lib/: opencv_core480.lib  opencv_highgui480.lib  opencv_imgcodecs480.lib  opencv_imgproc480.lib
